--- a/index.html
+++ b/index.html
@@ -795,7 +795,6 @@
         max-width: 95%;
     }
 }
-
     </style>
 </head>
 
@@ -809,7 +808,7 @@
     </div>
 
     <div class="container">
-        <h1>ヘアカラー専門ＭＩＮＴ<br>石狩店<br>予約フォーム</h1>
+        <h1>ヘアカラー専門ＭＩＮＴ<br>新琴似店<br>予約フォーム</h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
 
@@ -834,10 +833,10 @@
 
         <div id="male" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆スタンダードカラー◆</span>
+                <span class="highlight-text">◆ノーマルカラー◆</span>
             </div>
             <div class="symptoms">
-                <div class="info-textnomal">⚫︎2cm以上伸びている方は<br>全体染め(2cm以上の根元染め)をご選択ください</div>
+                <div class="info-textnomal">⚫︎2cm以上伸びている方は<br>全体染め(2cm以上の根元染め)を<br>ご選択ください</div>
                 <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="2530">根元染め</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="3190">全体染め</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="3850">全体染め ロング</button>
@@ -865,7 +864,7 @@
                 <span class="highlight-text">◆コラーゲンカラー◆</span>
             </div>
             <div class="symptoms">
-                <div class="info-textnomal">⚫︎2cm以上伸びている方は<br>全体染め(2cm以上の根元染め)をご選択ください</div>
+                <div class="info-textnomal">⚫︎2cm以上伸びている方は<br>全体染め(2cm以上の根元染め)を<br>ご選択ください</div>
                 <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="3300">コラーゲンカラー根元染め</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="3960">コラーゲンカラー全体染め</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="4620">コラーゲンカラー全体染め ロング</button>
@@ -875,7 +874,7 @@
             </div>
             <div class="irradiations">
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="550">アルカリ除去 （後処理）</button>
-                <div class="info-textmemo">価格：＋550円</div>
+                <div class="info-textmemo">残留アルカリ除去・内部水分保持・消臭効果<br>価格：＋550円</div>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="1430">カラーケアトリートメント</button>
                 <div class="info-textmemo">2step サラサラor<br>3step うるおい<br>価格：＋1430円</div>
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="330">頭皮保護ガード</button>
@@ -888,7 +887,7 @@
                 <span class="highlight-text">◆プレックスカラー◆</span>
             </div>
             <div class="symptoms">
-                <div class="info-textnomal">⚫︎2cm以上伸びている方は<br>全体染め(2cm以上の根元染め)をご選択ください</div>
+                <div class="info-textnomal">⚫︎2cm以上伸びている方は<br>全体染め(2cm以上の根元染め)を<br>ご選択ください</div>
                 <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="3300">プレックスカラー根元染め</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="3960">プレックスカラー全体染め</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="4620">プレックスカラー全体染め ロング</button>
@@ -898,7 +897,7 @@
             </div>
             <div class="irradiations">
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="550">アルカリ除去 （後処理）</button>
-                <div class="info-textmemo">価格：＋550円</div>
+                <div class="info-textmemo">残留アルカリ除去・内部水分保持・消臭効果<br>価格：＋550円</div>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="1430">カラーケアトリートメント</button>
                 <div class="info-textmemo">2step サラサラor<br>3step うるおい<br>価格：＋1430円</div>
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="330">頭皮保護ガード</button>
@@ -974,7 +973,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2001302547-NXrj0kn9'
+                liffId: '2001298999-Kv8a9oo5'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -1060,7 +1059,6 @@ if (savedGender) {
                 }
             });
         });
-
 
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
@@ -1449,7 +1447,7 @@ if (savedGender) {
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbzYLOJRlBGEWeafO0gz9pV705maVVr9hb0dY1LtjZzlnqebiTA8KGOwh47UDbqbenh6/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbz2wZt7L1ZVfVfPQI-CqXMuucPXj2DJqrb_Qt0WFWlHMXEEytjvuwqyg9qzDxg4kO2ICA/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
@@ -1550,7 +1548,7 @@ if (savedGender) {
                     slotStart.setHours(parseInt(times[j].split(':')[0]), parseInt(times[j].split(':')[1]), 0, 0);
 
                     const slotEnd = new Date(slotStart);
-                    let menuDuration = selectedMenuTime || 0;
+                    let menuDuration = selectedMenuTime || 10;
                     let visitDuration = selectedVisitTime || 0;
                     let irradiationsDuration = selectedirradiationsTime || 0;
 
