--- a/index.html
+++ b/index.html
@@ -864,6 +864,86 @@ h1 {
   z-index: 0;
   overflow: hidden;
 }
+
+/* 肉球の基本スタイル */
+.paw-img, .paw-img-label {
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  pointer-events: none;
+  z-index: 1;
+}
+
+/* h1用肉球 */
+.paw-img.tl { top: 5px; left: 5px; }
+.paw-img.tr { top: 5px; right: 5px; }
+.paw-img.bl { bottom: 5px; left: 5px; }
+.paw-img.br { bottom: 5px; right: 5px; }
+
+/* label用肉球 - %で相対配置に修正 */
+.paw-img-label.tl {
+  top: 3px;
+  left: 10%;
+  width: 25px;
+  height: 25px;
+}
+.paw-img-label.tr {
+  top: 3px;
+  right: -10%;
+}
+.paw-img-label.bl {
+  bottom: 4px;
+  left: 10%;
+}
+.paw-img-label.br {
+  bottom: 3px;
+  right: 10%;
+}
+.paw-img-label.tm {
+  bottom: 4px;
+  left: 45%;
+}
+.paw-img-label.bm {
+  bottom: 32px;
+  left: 45%;
+}
+.paw-img-label.lm {
+  bottom: 3px;
+  left: 35%;
+  width: 55px;
+}
+.paw-img-label.rm {
+  bottom: 32px;
+  right: 35%;
+}
+
+/* スマホ向け調整 */
+@media screen and (max-width: 600px) {
+  .paw-img-label.tl,
+  .paw-img-label.tr,
+  .paw-img-label.bl,
+  .paw-img-label.br,
+  .paw-img-label.tm,
+  .paw-img-label.bm,
+  .paw-img-label.lm,
+  .paw-img-label.rm {
+    width: 20px;
+    height: 20px;
+    left: auto;
+    right: auto;
+    transform: translateX(-50%);
+  }
+
+  .paw-img-label.tl { left: 35%; }
+  .paw-img-label.tr { right: 20%; }
+  .paw-img-label.bl { left: 20%; }
+  .paw-img-label.br { right: 20%; }
+  .paw-img-label.tm { left: 50%; }
+  .paw-img-label.bm { left: 50%; }
+  .paw-img-label.lm { left: 30%; width: 40px; }
+  .paw-img-label.rm { right: 30%; }
+}
+
     </style>
 </head>
 
