--- a/index.html
+++ b/index.html
@@ -810,13 +810,6 @@ h1 {
   height: 25px;  /* ← 2倍 */
 }
 
-.paw-img-label.tr {
-  top: 3px;
-  right: 255px;
-  width: 25px;
-  height: 25px;
-}
-
 .paw-img-label.bl {
   bottom: 4px;
   left: 65px;
@@ -889,32 +882,45 @@ h1 {
 }
 .paw-img-label.tr {
   top: 6px;
-  right: -10%;
+  left: 35%;
+  width: 25px;
+  height: 25px;
 }
 .paw-img-label.bl {
-  bottom: 7px;
-  left: 10%;
+  top: 6px;
+  left: 20%;
+  width: 25px;
+  height: 25px;
 }
 .paw-img-label.br {
-  bottom: 3px;
-  right: 10%;
+  top: 6px;
+  left: 35%;
+  width: 25px;
+  height: 25px;
 }
 .paw-img-label.tm {
-  bottom: 4px;
-  left: 45%;
+  top: 6px;
+  left: 35%;
+  width: 25px;
+  height: 25px;
 }
 .paw-img-label.bm {
-  bottom: 32px;
-  left: 45%;
+  top: 6px;
+  left: 65%;
+  width: 25px;
+  height: 25px;
 }
 .paw-img-label.lm {
-  bottom: 3px;
+  top: 6px;
   left: 35%;
-  width: 55px;
+  width: 25px;
+  height: 25px;
 }
 .paw-img-label.rm {
-  bottom: 32px;
-  right: 35%;
+  top: 6px;
+  left: 35%;
+  width: 25px;
+  height: 25px;
 }
 
 /* スマホ向け調整 */
@@ -938,8 +944,8 @@ h1 {
   .paw-img-label.tr { right: 65%; }
   .paw-img-label.bl { left: 15%; }
   .paw-img-label.br { right: 20%; }
-  .paw-img-label.tm { left: 50%; }
-  .paw-img-label.bm { left: 50%; }
+  .paw-img-label.tm { left: 35%; }
+  .paw-img-label.bm { left: 35%; }
   .paw-img-label.lm { left: 30%; width: 40px; }
   .paw-img-label.rm { right: 30%; }
 }
@@ -983,7 +989,7 @@ h1 {
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
-        <div class="label" id="course">メニューをお選びください<span class="required">必須</span>
+        <div class="label" id="course">メニューお選びください<span class="required">必須</span>
             <img class="paw-img-label bl" src="https://www.dropbox.com/scl/fi/xtz6o6pq9muagpbfjns0j/1200.png?rlkey=3lz84x6i1sznjg0wuo4qjf5jf&st=g9orthgq&raw=1" style="transform: rotate(-30deg);" alt="肉球">
 </div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
@@ -1053,10 +1059,10 @@ h1 {
 <button class="submit-button" onclick="submitForm()" id="section-message">
   予約を行う
   <img class="paw-img-label lm" src="https://www.dropbox.com/scl/fi/vw6d3bd8k8zwgukf3bbdp/_-2.png?rlkey=dwuj3xfut52zicxr5g22gsyl4&st=goaeyjid&raw=1"
-       style="position: absolute; top: -45px; left: 80%; transform: translateX(-50%) rotate(100deg); width: 140px; height: 140px;" 
+       style="position: absolute; top: -25px; left: 80%; transform: translateX(-50%) rotate(100deg); width: 100px; height: 100px;" 
        alt="肉球">
   <img class="paw-img-label lm" src="https://www.dropbox.com/scl/fi/bkzsh8sm01wwxfkk1c9n3/.png?rlkey=7jj84fecfmpf251ti09ds3ea3&st=dfehn6kq&raw=1"
-       style="position: absolute; top: -42px; left: 19%; transform: translateX(-50%) rotate(70deg); width: 140px; height: 140px;" 
+       style="position: absolute; top: -22px; left: 19%; transform: translateX(-50%) rotate(70deg); width: 100px; height: 100px;" 
        alt="肉球">
 </button>
 
