--- a/index.html
+++ b/index.html
@@ -944,11 +944,12 @@ h1 {
   .paw-img-label.tr { right: 65%; }
   .paw-img-label.bl { left: 15%; }
   .paw-img-label.br { right: 20%; }
-  .paw-img-label.tm { left: 35%; }
-  .paw-img-label.bm { left: 35%; }
-  .paw-img-label.lm { left: 30%; width: 40px; }
-  .paw-img-label.rm { right: 30%; }
+  .paw-img-label.tm { left: 27%; }
+  .paw-img-label.bm { left: 28%; }
+  .paw-img-label.lm { left: 20%; width: 40px; }
+  .paw-img-label.rm { right: 25%; }
 }
+
 
     </style>
 </head>
@@ -1044,11 +1045,12 @@ h1 {
             </div>
         </div>
 
-        <div class="labelContent">メッセージ<br>（質問等お気軽にご記入ください）
-            <img class="paw-img-label bm" src="https://www.dropbox.com/scl/fi/xtz6o6pq9muagpbfjns0j/1200.png?rlkey=3lz84x6i1sznjg0wuo4qjf5jf&st=g9orthgq&raw=1" style="transform: rotate(-30deg);" alt="肉球">
-<img class="paw-img-label rm" src="https://www.dropbox.com/scl/fi/xtz6o6pq9muagpbfjns0j/1200.png?rlkey=3lz84x6i1sznjg0wuo4qjf5jf&st=g9orthgq&raw=1" style="transform: rotate(30deg);" alt="肉球">
+<div class="labelContent">
+  メッセージ<br>（質問等お気軽にご記入ください）
+  <img class="paw-img-label bm" src="https://www.dropbox.com/scl/fi/xtz6o6pq9muagpbfjns0j/1200.png?rlkey=3lz84x6i1sznjg0wuo4qjf5jf&st=g9orthgq&raw=1" style="transform: rotate(-30deg);" alt="肉球">
+  <img class="paw-img-label rm" src="https://www.dropbox.com/scl/fi/xtz6o6pq9muagpbfjns0j/1200.png?rlkey=3lz84x6i1sznjg0wuo4qjf5jf&st=g9orthgq&raw=1" style="transform: rotate(30deg);" alt="肉球">
 </div>
-        <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
+<textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <div class="labelContent">ご予約内容
             <img class="paw-img-label tm" src="https://www.dropbox.com/scl/fi/xtz6o6pq9muagpbfjns0j/1200.png?rlkey=3lz84x6i1sznjg0wuo4qjf5jf&st=g9orthgq&raw=1" style="transform: rotate(-30deg);" alt="肉球">
