--- a/index.html
+++ b/index.html
@@ -1470,19 +1470,18 @@
         return;
     }
 
-    // LINEトークにメッセージを送信
-    liff.sendMessages([{
-        type: 'text',
-        text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
-    }]).then(() => {
-        /* メッセージ送信成功時の処理 */
-        alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
-        /* LIFFウィンドウを閉じる */
-        liff.closeWindow();
-    }).catch((err) => {
-        /* メッセージ送信失敗時の処理 */
-        console.error('メッセージの送信に失敗しました', err);
-    });
+// irradiationsCountの存在チェック（null, undefined, 空文字でないか）
+const irradiationText = formData.irradiationsCount ? `,${formData.irradiationsCount}` : '';
+
+liff.sendMessages([{
+    type: 'text',
+    text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}${irradiationText}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+}]).then(() => {
+    alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
+    liff.closeWindow();
+}).catch((err) => {
+    console.error('メッセージの送信に失敗しました', err);
+});
 }
 
         function formatDate(dateStr) {
