--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(13px);
             /* 中央配置と右ずらし */
-            background: #13ca5e;
+            background: #88705a;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #13ca5e, #0fa958);
+            background: linear-gradient(135deg, #88705a, #644f3b);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -123,7 +123,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #88705a;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -141,7 +141,7 @@
     margin-bottom: 10px;
     padding: 3px;
     font-weight: 600;
-    background-color: #13ca5e;
+    background-color: #88705a;
     color: white;
     border-radius: 6px;
     font-size: 18px;
@@ -163,12 +163,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #13ca5e;
+            color: #88705a;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #13ca5e;
+            border: 2px solid #88705a;
         }
 
         input[type="text"],
@@ -278,7 +278,7 @@
             width: auto;
             /* 通常のセルは自動調整 */
             box-sizing: border-box;
-            border: 2px solid #696969;
+            border: 2px solid #88705a;
         }
 
         .calendar th:first-child,
@@ -298,7 +298,7 @@
         }
 
         .calendar td.selected {
-            background-color: #13ca5e;
+            background-color: #88705a;
             color: #fff;
         }
 
@@ -518,7 +518,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #13ca5e;
+            background-color: #88705a;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -581,7 +581,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #13ca5e;
+            border-color: #88705a;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -590,7 +590,7 @@
             padding: 12px;
             border: none;
             border-radius: 6px;
-            background-color: #13ca5e;
+            background-color: #88705a;
             color: #000000;
             font-size: 16px;
             cursor: pointer;
@@ -606,11 +606,11 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #dc3545;
+            background-color: #eabc42;
         }
 
         .submit-button:hover {
-            background-color: #c82333;
+            background-color: #eabc42;
         }
 
         @media (max-width: 768px) {
@@ -659,7 +659,7 @@
             left: 50%;
             transform: translate(-50%, -10px);
             /* Y方向に上げる */
-            background-color: #13ca5e;
+            background-color: #88705a;
             color: #fff;
             padding: 3px 12px;
             /* ボックスのパディングを縮小 */
@@ -743,7 +743,7 @@
     margin-bottom: 1px; /* 下に10pxのスペースをあける（余白） */
     padding: 3px; /* 内側に3pxのスペースをつける（中身がくっつかないように） */
     font-weight: 600; /* 文字を少し太くする（600は太さの目安） */
-    background-color: #13ca5e; /* 背景の色をくすんだ緑にする */
+    background-color: #88705a; /* 背景の色をくすんだ緑にする */
     color: white; /* 文字の色を白にする */
     border-radius: 6px; /* 角を6pxだけ丸くする（ふんわりした見た目に） */
     font-size: 20px; /* 文字の大きさを18pxにする（ちょっと大きめ） */
@@ -796,7 +796,7 @@
     </div>
 
     <div class="container">
-        <h1>予約フォームのみ<br>予約フォーム
+        <h1>MOA<br>予約フォーム
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -968,16 +968,16 @@
 
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
-            const selectedMenuText = selectedMenu ? `<span style="color:#13ca5e;"><strong>【コース】</strong></span><br>・${selectedMenu}` : '・コースが未選択です';
+            const selectedMenuText = selectedMenu ? `<span style="color:#88705a;"><strong>【コース】</strong></span><br>・${selectedMenu}` : '・コースが未選択です';
 
             // メニューが選択されていたら、各メニューを改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:#13ca5e;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
+                ? `<span style="color:#88705a;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
                 : '・メニューが未選択です';
 
             // オプションが選択されていたら、各オプションを改行して表示
             const irradiationsText = irradiationsCount
-                ? `<span style="color:#13ca5e;"><strong>【オプション】</strong></span><br>${irradiationsCount.split(', ').join('<br>')}`
+                ? `<span style="color:#88705a;"><strong>【オプション】</strong></span><br>${irradiationsCount.split(', ').join('<br>')}`
                 : '・オプション無し';
 
             // 所要時間を計算
@@ -986,28 +986,28 @@
             let minutes = totalMinutes % 60;
 
             // 所要時間の表示形式：○○時間○○分
-            let totalTimeText = `・<span style="color:#13ca5e;"><strong>所要時間</strong></span>：${hours > 0 ? hours + '時間' : ''}${minutes}分`;
+            let totalTimeText = `・<span style="color:#88705a;"><strong>所要時間</strong></span>：${hours > 0 ? hours + '時間' : ''}${minutes}分`;
 
             // 合計金額の表示
-            const totalAmountText = `・<span style="color:#13ca5e;"><strong>合計金額</strong></span>：¥${menuPrice + optionsPrice}`;
+            const totalAmountText = `・<span style="color:#88705a;"><strong>合計金額</strong></span>：¥${menuPrice + optionsPrice}`;
 
             // 第1希望日が選択された場合の表示
             const selectedDate1 = document.getElementById('date1').value;
             const selectedDate1Text = selectedDate1
-                ? `・<span style="color:#13ca5e;"><strong>第1希望日</strong></span>：${formatDateTime(selectedDate1)}`
+                ? `・<span style="color:#88705a;"><strong>第1希望日</strong></span>：${formatDateTime(selectedDate1)}`
                 : '・第1希望日が未選択です';
 
             // 第2希望日が選択された場合の表示
             const selectedDate2 = document.getElementById('date2').value;
             const selectedDate2Text = selectedDate2
-                ? `・<span style="color:#13ca5e;"><strong>第2希望日</strong></span>：${formatDateTime(selectedDate2)}`
+                ? `・<span style="color:#88705a;"><strong>第2希望日</strong></span>：${formatDateTime(selectedDate2)}`
                 : '・第2希望日が未選択です';
 
 
             // 修正ボタン付きのHTMLを作成
             document.getElementById('displayInfo').innerHTML = `
         <div class="info-row">
-            <p><span style="color:#13ca5e;"><strong>【お名前】</strong></span><br>・${name}</p>
+            <p><span style="color:#88705a;"><strong>【お名前】</strong></span><br>・${name}</p>
             <button class="edit-button" onclick="scrollToElement('name')">修正する</button>
         </div>
         <hr>
@@ -1351,7 +1351,7 @@ updatedSelectedButtons.forEach((btn) => {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n\n電話番号：${formData.phone}\n\nメニュー：${formData.selectedSymptom}\n\n来店人数：${formData.Number}\n\nお子様人数：${formData.child}\n\nテラス席：${formData.highschoolCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n【お名前】\n・${formData.name}\n【電話番号】\n・${formData.phone}\n\nメニュー】\n・${formData.selectedSymptom}\n\n来店人数\n・${formData.Number}\n\nお子様人数\n・${formData.child}\n\nテラス席\n・${formData.highschoolCount}\n\n【希望日時】\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
