--- a/index.html
+++ b/index.html
@@ -1350,7 +1350,7 @@ updatedSelectedButtons.forEach((btn) => {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n【お名前】\n・${formData.name}\n【電話番号】\n・${formData.phone}\n\n【コース】\n・${formData.selectedMenu}\n\n【メニュー】\n・${formData.selectedSymptom}\n\n【来店人数】\n・${formData.Number}\n\n【お子様人数】\n・${formData.child}\n\nテラス席\n・${formData.highschoolCount}\n\n【希望日時】\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\nメッセージ：${formData.message}`
+                text: `≪予約フォーム≫\n【お名前】\n・${formData.name}\n【電話番号】\n・${formData.phone}\n\n【コース】\n・${formData.selectedMenu}\n【メニュー】\n・${formData.selectedSymptom}\n\n【来店人数】\n・${formData.Number}\n【お子様人数】\n・${formData.child}\n【テラス席】\n・${formData.highschoolCount}\n\n【希望日時】\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n【メッセージ】\n${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
