--- a/index.html
+++ b/index.html
@@ -118,22 +118,21 @@
             overflow: hidden;
         }
 
-        .label {
-            display: block;
-            margin-bottom: 10px;
-            padding: 3px;
-            font-weight: 600;
-            background-color: #13ca5e;
-            color: white;
-            border-radius: 6px;
-            font-size: 18px;
-            text-align: center;
-            /* 中央揃え */
-            text-indent: 40px;
-            /* テキストを右に20pxずらす */
-            position: relative;
-            overflow: hidden;
-        }
+.label {
+    display: block;
+    margin-top: 3px;         /* ← 追加 */
+    margin-bottom: 10px;
+    padding: 3px;
+    font-weight: 600;
+    background-color: #13ca5e;
+    color: white;
+    border-radius: 6px;
+    font-size: 18px;
+    text-align: center;
+    text-indent: 40px;
+    position: relative;
+    overflow: hidden;
+}
 
         .labelContent {
             display: block;
@@ -186,6 +185,10 @@
         }
 
         .visit-buttons,
+        .hairmakeup-buttons,
+        .kimono-buttons,
+        .preparationphoto-buttons,
+        .Freshflowerphotography-buttons,
         .highschool-buttons,
         .symptoms,
         .menu-sections,
@@ -197,6 +200,10 @@
         }
 
         .visit-buttons button,
+        .hairmakeup-buttons button,
+        .kimono-buttons button,
+        .preparationphoto-buttons button,
+        .Freshflowerphotography-buttons button,
         .highschool-buttons button,
         .symptoms button,
         .menu-sections button,
@@ -213,6 +220,10 @@
         }
 
         .visit-buttons button.active,
+        .hairmakeup-buttons button.active,
+        .kimono-buttons button.active,
+        .preparationphoto-buttons button.active,
+        .Freshflowerphotography-buttons button.active,
         .highschool-buttons button.active,
         .symptoms button.active,
         .menu-sections button.active,
@@ -804,6 +815,27 @@
         .edit-button:hover {
             background-color: #ff4f4f;
         }
+
+/* time入力欄 */
+#mugwortreservationtime {
+    width: 100%;             /* スマホ画面いっぱいに広げる */
+    padding: 1em;            /* タップしやすく内側余白を増やす */
+    font-size: 1rem;         /* 入力しやすい文字サイズ */
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    background-color: #fff;
+    box-sizing: border-box;
+    appearance: none;        /* iOS Safariで余計なスタイルを消す */
+    -webkit-appearance: none;
+    transition: border-color 0.3s;
+}
+
+/* フォーカス時の装飾 */
+#mugwortreservationtime:focus {
+    border-color: #00a683;
+    outline: none;
+    background-color: #f9fefc;
+}
     </style>
 </head>
 
@@ -817,7 +849,7 @@
     </div>
 
     <div class="container">
-        <h1>予約フォームのみ<br>予約フォーム
+        <h1>すずき写真事務所<br>お宮参り
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -825,17 +857,63 @@
         <div class="label">電話番号<span class="required">必須</span></div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
-        <div class="label">ご来店回数<span class="required">必須</span></div>
+        <div class="label">プランをお選びください<span class="required">必須</span></div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">初回</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">リピーター様</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">お参り同行プラン 47000円+税</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">スタジオお宮参りプラン 37000円+税</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">お参り同行+スタジオ2シーン 67000円+税</button>
         </div>
 
-        <div class="label">高校生以下ですか？</div>
-        <div class="highschool-buttons">
-            <button type="button" id="firsthighschool" onclick="selecthighschool(this)">はい</button>
-            <button type="button" id="repeathighschool" onclick="selecthighschool(this)">いいえ</button>
-        </div>
+            <div class="label">祈祷されるお子様（お名前・月齢・性別）<span class="required">必須</span></div>
+            <textarea id="mugwortmainkid" placeholder="例：山田太郎・3ヶ月・男の子など 複数いれば全員分ご記入ください。"></textarea>
+
+            <div class="label">付き添いご兄弟のお名前、年齢、性別をご記入ください（任意）</div>
+            <textarea id="mugwortsiblinginfo" placeholder="お名前・年齢・性別をご記入ください。"></textarea>
+
+            <div class="label">撮影に参加される方の人数と続柄（任意）</div>
+            <input type="text" id="mugwortparticipants" placeholder="例：祖母2人、父、母 など">
+
+            <div class="label">同行撮影の方はお参りされる神社名（任意）</div>
+            <input type="text" id="mugwortshrinename" placeholder="神社名をご記入ください">
+
+            <div class="label">ご祈祷の予約時間（任意）</div>
+            <input type="time" id="mugwortreservationtime">
+
+            <div class="label">生花撮影ご希望の有無（スタジオのみ）（任意）</div>
+            <div class="Freshflowerphotography-buttons">
+                <button type="button" onclick="selectFreshflowerphotography(this)">有り</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">無し</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">相談したい</button>
+            </div>
+
+            <div class="label">お支度風景撮影ご希望の有無<span class="required">必須</span></div>
+            <div class="preparationphoto-buttons">
+                <button type="button" onclick="selectpreparationphoto(this)">有り</button>
+                <button type="button" onclick="selectpreparationphoto(this)">無し</button>
+                <button type="button" onclick="selectpreparationphoto(this)">相談したい</button>
+            </div>
+
+            <div class="label">◎着物レンタル希望の有無<span class="required">必須</span></div>
+            <div class="kimono-buttons">
+                <button type="button" onclick="selectkimono(this)">有り</button>
+                <button type="button" onclick="selectkimono(this)">無し</button>
+                <button type="button" onclick="selectkimono(this)">相談したい</button>
+            </div>
+
+            <div class="labelContent" id="kimono-followup" style="display: none;">
+                <p>以下の内容をご準備またはお送りください：</p>
+                <ul>
+                    <li>お子様：衣装のスクリーンショット、安心パックの有無、靴のサイズ</li>
+                    <li>大人：衣装スクショ、洋服のサイズ、靴のサイズ、安心パックの有無、年代、好きな雰囲気</li>
+                </ul>
+            </div>
+
+            <div class="label">◎お支度ご希望の有無<span class="required">必須</span></div>
+            <div class="hairmakeup-buttons">
+                <button type="button" onclick="selecthairmakeup(this)">有り</button>
+                <button type="button" onclick="selecthairmakeup(this)">無し</button>
+                <button type="button" onclick="selecthairmakeup(this)">相談したい</button>
+            </div>
 
 
         
@@ -881,6 +959,10 @@
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
         let visitCount = '';
+        let hairmakeupCount = '';
+        let kimonoCount = '';
+        let preparationphotoCount = '';
+        let FreshflowerphotographyCount = '';
         let selectedMenu = '';
         let highschoolCount = '';
         let selectedSymptom = [];  // 配列として定義
@@ -1266,6 +1348,66 @@ function selectVisit(element) {
     fetchAvailability(currentDate);
 }
 
+// 訪問回数の選択（初回・リピート）
+function selectFreshflowerphotography(element) {
+    document.querySelectorAll('.Freshflowerphotography-buttons button').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
+    FreshflowerphotographyCount = element.innerText;
+
+    // 選択された訪問回数に対応する時間を取得
+    selectedFreshflowerphotographyTime = FreshflowerphotographyTimes[FreshflowerphotographyCount];
+
+    console.log('選択された訪問回数の時間:', selectedFreshflowerphotographyTime);
+
+    // カレンダーを更新するために取得する日付を渡す
+    fetchAvailability(currentDate);
+}
+
+// 訪問回数の選択（初回・リピート）
+function selecthairmakeup(element) {
+    document.querySelectorAll('.hairmakeup-buttons button').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
+    hairmakeupCount = element.innerText;
+
+    // 選択された訪問回数に対応する時間を取得
+    selectedhairmakeupTime = hairmakeupTimes[hairmakeupCount];
+
+    console.log('選択された訪問回数の時間:', selectedhairmakeupTime);
+
+    // カレンダーを更新するために取得する日付を渡す
+    fetchAvailability(currentDate);
+}
+
+// 訪問回数の選択（初回・リピート）
+function selectkimono(element) {
+    document.querySelectorAll('.kimono-buttons button').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
+    kimonoCount = element.innerText;
+
+    // 選択された訪問回数に対応する時間を取得
+    selectedkimonoTime = kimonoTimes[kimonoCount];
+
+    console.log('選択された訪問回数の時間:', selectedkimonoTime);
+
+    // カレンダーを更新するために取得する日付を渡す
+    fetchAvailability(currentDate);
+}
+
+// 訪問回数の選択（初回・リピート）
+function selectpreparationphoto(element) {
+    document.querySelectorAll('.preparationphoto-buttons button').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
+    preparationphotoCount = element.innerText;
+
+    // 選択された訪問回数に対応する時間を取得
+    selectedpreparationphotoTime = preparationphotoTimes[preparationphotoCount];
+
+    console.log('選択された訪問回数の時間:', selectedpreparationphotoTime);
+
+    // カレンダーを更新するために取得する日付を渡す
+    fetchAvailability(currentDate);
+}
+
         function selecthighschool(element) {
             // 選択された日時をリセット
             selectedFullDate = '';
@@ -1358,8 +1500,17 @@ function selectVisit(element) {
             const formData = {
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
+                mugwortmainkid: document.getElementById('mugwortmainkid').value.trim(),
+                mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
+                mugwortparticipants: document.getElementById('mugwortparticipants').valumugwortparticipants.trim(),
+                mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
+                mugwortreservationtime: document.getElementById('mugwortreservationtime').value.trim(),
                 visitCount: visitCount,
                 highschoolCount: highschoolCount,
+                hairmakeupCount: hairmakeupCount,
+                kimonoCount: kimonoCount,
+                preparationphotoCount: preparationphotoCount,
+                FreshflowerphotographyCount: FreshflowerphotographyCount,
                 selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
                 dates: [
                     document.getElementById('date1').value,
@@ -1393,7 +1544,7 @@ function selectVisit(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n\n電話番号：${formData.phone}\n\nご来店回数：${formData.visitCount}\n\n高校生以下ですか？：${formData.highschoolCount}\n\nメニュー：${formData.selectedSymptom}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\nプラン\n・${formData.visitCount}\n\n祈祷されるお子様\n・${formData.mugwortmainkid}\n\n付き添いご兄弟\n・${formData.mugwortsiblinginfo}\n\n撮影に参加される方\n・${formData.mugwortparticipants}\n\n同行撮影\n・${formData.mugwortshrinename}\n\nご祈祷の予約時間\n・${formData.mugwortreservationtime}\n\n生花撮影\n・${formData.FreshflowerphotographyCount}\n\nお支度風景\n・${formData.preparationphotoCount}\n\n着物レンタル\n・${formData.visitCount}\n\nお支度ご希望\n・${formData.hairmakeupCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
