--- a/index.html
+++ b/index.html
@@ -1502,7 +1502,7 @@ function selectpreparationphoto(element) {
                 phone: document.getElementById('phone').value.trim(),
                 mugwortmainkid: document.getElementById('mugwortmainkid').value.trim(),
                 mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
-                mugwortparticipants: document.getElementById('mugwortparticipants').valumugwortparticipants.trim(),
+                mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
                 mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
                 mugwortreservationtime: document.getElementById('mugwortreservationtime').value.trim(),
                 visitCount: visitCount,
