--- a/index.html
+++ b/index.html
@@ -1498,26 +1498,19 @@ function selectpreparationphoto(element) {
 
         function submitForm() {
             const formData = {
-                name: document.getElementById('name').value.trim(),
-                phone: document.getElementById('phone').value.trim(),
-                mugwortmainkid: document.getElementById('mugwortmainkid').value.trim(),
-                mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
-                mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
-                mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
-                mugwortreservationtime: document.getElementById('mugwortreservationtime').value.trim(),
-                visitCount: visitCount,
-                hairmakeupCount: hairmakeupCount,
-                kimonoCount: kimonoCount,
-                preparationphotoCount: preparationphotoCount,
-                FreshflowerphotographyCount: FreshflowerphotographyCount,
-                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
-                dates: [
-                    document.getElementById('date1').value,
-                    document.getElementById('date2').value,
-                    document.getElementById('date3').value
-                ],
-                message: document.getElementById('message').value.trim()
-            };
+        name: document.getElementById('name').value.trim(),
+        phone: document.getElementById('phone').value.trim(),
+        mugwortmainkid: document.getElementById('mugwortmainkid').value.trim(),
+        mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
+        mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
+        mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
+        mugwortreservationtime: document.getElementById('mugwortreservationtime').value.trim(),
+        visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount,
+        date1: document.getElementById('date1').value,
+        date2: document.getElementById('date2').value,
+        date3: document.getElementById('date3').value,
+        message: document.getElementById('message').value.trim()
+      };
 
             // フォームデータのチェック
             if (!formData.name) {
